--- a/TimesheetManagement/TimesheetManagement/appsettings.json
+++ b/TimesheetManagement/TimesheetManagement/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TimesheetDBEntities": "Server=jeanpc\\devenv;Database=timesheetdb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "TimesheetDBEntities": "Server=jeanpc\\devenv;Database=timesheetdb_v2;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "ApplicationInsights": {
     "ConnectionString": "<set-your-ai-connection-string>"
