--- a/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
+++ b/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
@@ -18,5 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
 </Project>
