--- a/TimesheetManagement/TimesheetManagement.API/TimesheetManagement.API.csproj
+++ b/TimesheetManagement/TimesheetManagement.API/TimesheetManagement.API.csproj
@@ -9,8 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TimesheetManagement.Application\TimesheetManagement.Application.csproj" />
+    <ProjectReference Include="..\TimesheetManagement.Infrastructure\TimesheetManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
