--- a/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
+++ b/TimesheetManagement/TimesheetManagement.Application/TimesheetManagement.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
