--- a/TimesheetManagement/TimesheetManagement.UnitTests/TimesheetManagement.UnitTests.csproj
+++ b/TimesheetManagement/TimesheetManagement.UnitTests/TimesheetManagement.UnitTests.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
