--- a/TimesheetManagement/TimesheetManagement.IntegrationTests/TimesheetManagement.IntegrationTests.csproj
+++ b/TimesheetManagement/TimesheetManagement.IntegrationTests/TimesheetManagement.IntegrationTests.csproj
@@ -13,9 +13,15 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TimesheetManagement.Domain\TimesheetManagement.Domain.csproj" />
+    <ProjectReference Include="..\TimesheetManagement.Infrastructure\TimesheetManagement.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
