--- a/TimesheetManagement/TimesheetManagement.IntegrationTests/TimesheetManagement.IntegrationTests.csproj
+++ b/TimesheetManagement/TimesheetManagement.IntegrationTests/TimesheetManagement.IntegrationTests.csproj
@@ -16,7 +16,7 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.22" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="Respawn" Version="7.0.0" />
     <PackageReference Include="Testcontainers.MsSql" Version="4.9.0" />
