--- a/TimesheetManagement/TimesheetManagement.UnitTests/TimesheetManagement.UnitTests.csproj
+++ b/TimesheetManagement/TimesheetManagement.UnitTests/TimesheetManagement.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <LangVersion>12.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
